<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.practica2.MainActivity" >

    <EditText
        android:id="@+id/txt_resultado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/txt_resultado"
         android:layout_marginTop="15dp"
         android:gravity="center_vertical|top|center_horizontal"
         android:orientation="horizontal" >

         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="vertical" >
             
    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_limpiarTodo" />
    <Button
        android:id="@+id/btn_seno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_seno" />
     <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_7" />
     <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_4" />
    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_1" />
    <Button
        android:id="@+id/btn_punto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_punto" /> 
   
             
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >
             
    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_borrar" />
    <Button
        android:id="@+id/btn_coseno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_coseno" />
     <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_8" />
     <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_5" />
    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_2" />
    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_0" /> 
   
             
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >
             
    
    <Button
        android:id="@+id/btn_exponencial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_exponencial" />
    <Button
        android:id="@+id/btn_tangente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tangente" />
     <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_9" />
     <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_6" />
    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_3" />
    <Button
        android:id="@+id/btn_igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_igual" /> 
   
             
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >
     <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_log" />
    <Button
        android:id="@+id/btn_raiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_raiz" />
     <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_division" />
     <Button
        android:id="@+id/btn_multiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_multiplicacion" />
    <Button
        android:id="@+id/btn_resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_resta" />
    <Button
        android:id="@+id/btn_suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_suma" /> 
   
             
    </LinearLayout>
    </LinearLayout>


   

</RelativeLayout>
